Replaced with javax.xml.bind.DatatypeConverter to net.iharder.Base64 for ability to use library on android. Add gradle build script.